--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-10-18 carol <carol@gimp.org>
 
+    * resources/gradients/*.png and mgo-gradients.py: one more redrawing
+    of the gradients.
+
+2002-10-18 carol <carol@gimp.org>
+
     * resources/gradients/*.png and mgo-gradients.py: the gradient is now
     rendered from right to left instead of corner to corner.
 
