--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,6 @@
-2002-10-18 carol <carol@gimp.org>
-
-    * resources/gradients/*.png and mgo-gradients.py: one more redrawing
-    of the gradients.
-
-2002-10-18 carol <carol@gimp.org>
-
-    * resources/gradients/*.png and mgo-gradients.py: the gradient is now
-    rendered from right to left instead of corner to corner.
+2002-10-18 brix <brix@gimp.org>
+	* includes/tutnavbar.inc, includes/menu.inc: added trailing
+	slashes to directory links (thanks to UnNamed for spotting this)
 
 2002-10-18 carol <carol@gimp.org>
 
