Modified ChangeLog. Forgot one image.
Modified ChangeLog.
Forgot one image.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2002-10-18 scizzo <scizzo@gimp.org>
 
         * tutorials/Drawing_Shapes/: Add the Shapes tutorial.
+        Forgot one image.
 
         * tutorials/Bezier_Selections/: Fixed the author name.
 
