Modified ChangeLog. Put the rest of the tutorial authors on the page so
Modified ChangeLog.
Put the rest of the tutorial authors on the page so the list might be done.
Add the e-mail to the author just hope it is right.
Changed the author. It was GIMP-team before and now jtl.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2002-10-18 scizzo <scizzo@gimp.org>
 
+        * tutorials/Custom_Brushes/: Add the e-mail to the
+        author just hope it is right.
+
+        * tutorials/The_Basics: Changed the author. It was
+        GIMP-team before and now jtl.
+
+        * team.html: Put the rest of the tutorial authors on
+        the page so the list might be done.
+
         * tutorials/Drawing_Shapes/: Add the Shapes tutorial.
         Forgot one image.
 
