Modified ChangeLog. Edit mailto: for author.
Modified ChangeLog.
Edit mailto: for author.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@
         author just hope it is right.
 
         * tutorials/The_Basics: Changed the author. It was
-        GIMP-team before and now jtl.
+        GIMP-team before and now jtl. Edit mailto: for author.
 
         * team.html: Put the rest of the tutorial authors on
         the page so the list might be done.
