Modified ChangeLog. Add the GAP tutorial to the list.
Modified ChangeLog.
Add the GAP tutorial to the list.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-10-18 scizzo <scizzo@gimp.org>
 
+        * tutorials/index.html: Add the GAP tutorial to the
+        list.
+
         * tutorials/Custom_Brushes/: Add the e-mail to the
         author just hope it is right.
 
