Modified ChangeLog. My English is so good forgot an "a" in animation.
Modified ChangeLog.
My English is so good forgot an "a" in animation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2002-10-18 scizzo <scizzo@gimp.org>
 
         * tutorials/index.html: Add the GAP tutorial to the
-        list.
+        list. My English is so good forgot an "a" in animation.
 
         * tutorials/Custom_Brushes/: Add the e-mail to the
         author just hope it is right.
