Modified ChangeLog. Add the Advanced Animation tutorial, a little rude
Modified ChangeLog.
Add the Advanced Animation tutorial, a little rude though.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2002-10-18 scizzo <scizzo@gimp.org>
 
-        * tutorial/Using_Gap: Add the tutorial, first version
+        * tutorials/Advanced_Animations/: Add the Advanced Animation
+        tutorial, a little rude though.
+
+        * tutorials/Using_Gap: Add the tutorial, first version
         and it is to rude right now.
 
         * tutorials/index.html: Add the GAP tutorial to the
