--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-18 carol <carol@gimp.org>
+        
+        * resources/gradients/index.html: changed the <li>'s to <div>'s
+        
+        * resources/gradients/mgo-gradients.py the script is added
+        
 2002-10-18 scizzo <scizzo@gimp.org>
 
         * tutorials/Advanced_Animations/: Add the Advanced Animation
