--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,12 @@
         * resources/brushes/index.html and mgo-brushes.py:  added a style
         to the <div>'s and removed the <p>'s in each brush entry.
         
+        * resources/gradients/index.html and mgo-gradients.py:  added a style
+        to the <div>'s and removed the <p>'s in each brush entry.
+        
+        * resources/patterns/index.html and mgo-patterns.py:  added a style
+        to the <div>'s and removed the <p>'s in each brush entry.
+        
 2002-10-19 scizzo <scizzo@gimp.org>
 
         * tutorials/Advanced_Animations/: Forgot to add the .xcf.bz2
