--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-21 gsromero
+
+	* maillists.html: fixed a missing LI.
+	
 2002-10-21 brix <brix@gimp.org>
 
 	* template.html: added more code examples.
