Modified ChangeLog. Add the webpage for original tutorial. I want the
Modified ChangeLog.
Add the webpage for original tutorial.
I want the author to see the tutorial before I make changes so the old images are back also.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-21 scizzo <scizzo@gimp.org>
+
+        * tutorials/Straight_Line/: Add the webpage for original tutorial.
+        I want the author to see the tutorial before I make changes so the
+        old images are back also.
+
 2002-10-21 rockwlrs <rock@gimp.org>
 
 	* about/authors.html: list of authors and contributors
