Modified ChangeLog. Small fixes in the language and link.
Modified ChangeLog.
Small fixes in the language and link.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 
         * tutorials/Straight_Line/: Add the webpage for original tutorial.
         I want the author to see the tutorial before I make changes so the
-        old images are back also.
+        old images are back also. Small fixes in the language and link.
 
 2002-10-21 rockwlrs <rock@gimp.org>
 
