best descibed as humble beginnings.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
         * resources/gradients/index.html, resources/gradients/mgo-gradients.py
         and team.html: put some padding around the little thumbnails and added
         gsromero and rockwlrs to the team (finally, yay!) 
+
+	    * about/mediakit.html, Wilber_Construction_Kit_XP.xcf.gz and 
+        wilber-huge-alpha.png. best descibed as humble beginnings.
         
 2002-10-21 scizzo <scizzo@gimp.org>
 
