--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-27 brix <brix@gimp.org>
+
+	* style/default.css, README.tutorials: added "code" class to make
+	example code stand out in tutorials
+	
 2002-10-26 gsromero
 
 	* unix/tile-cache.html: new file, first guesses about how to set a
