--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-28 rockwlrs <rock@gimp.org>
+
+	* about/authors.html: ran recode to turn the utf to latin-1.  This
+	has to be done manually for now.
+
 2002-10-28 scizzo <scizzo@gimp.org>
 
         * tutorials/Basic_Perl/: added the first test version of the basic
