--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2002-10-29 scizzo <scizzo@gimp.org>
 
         * tutorials/Basic_Perl/: Trying to make the tutorial better
-        with the layout.
+        with the layout. Updating the tutorial for Basic_Perl.
 
 2002-10-28 rockwlrs <rock@gimp.org>
 
