--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-30 rockwlrs <rock@gimp.org>
+
+	* development.html: added a "link" to the Developers' Cookbook so that
+	we don't forget about it.
+
 2002-10-29 scizzo <scizzo@gimp.org>
 
         * tutorials/Basic_Perl/: Trying to make the tutorial better
