--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-31 scizzo <scizzo@gimp.org>
+
+        * tutorials/Basic_Perl: Made the last port, needs a lot of love
+        though.
+
 2002-10-30 carol <carol@gimp.org>
 
 	* development.html: after quite a bit of thought i removed rockwlrs url
