Modified ChangeLog. Try to make the Basic Scheme better.
Modified ChangeLog.
Try to make the Basic Scheme better.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2002-11-02 scizzo <scizzo@gimp.org>
 
         * tutorials/Basic_Scheme/: Add the first port for the Basic Scheme
-        tutorial.
+        tutorial. Try to make it better.
 
 2002-10-31 scizzo <scizzo@gimp.org>
 
