--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-11-03 scizzo <scizzo@gimp.org>
+
+        * tutorials/Perl_Debbuged: Add the first version of the Perl Debbuged
+        tutorial.
+
+        * tutorials/Basic_Perl: Add the original site link.
+
+        * tutorials/Basic_Scheme: Add the original site link.
+
 2002-11-02 scizzo <scizzo@gimp.org>
 
         * tutorials/Basic_Scheme/: Add the first port for the Basic Scheme
