--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2002-11-03 rockwlrs <rock@gimp.org>
+
+	* about/ChangeLogs/ChangeLog.pl: a script that autogenerates web pages
+	from ChangeLogs.
+
+	* about/ChangeLogs/1.2.3/ChangeLog: the ChangeLog from the 1.2.3
+	tarball.
+
+	* about/ChangeLogs/1.2.3/*.html: the ChangeLog in HTML form.
+
+	* about/index.html: added a link to the new ChangeLog
+
+	* install.exclude: added about/ChangeLogs/ChangeLog.pl
+
+	I would like to improve the navigation links a bit before I spam the
+	cvs server with more ChangeLog entry pages (1.3 and the pre-pages.)
+
 2002-11-03 scizzo <scizzo@gimp.org>
 
         * tutorials/Perl_Debbuged: Add the first version of the Perl Debbuged
