--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-03 carol <carol@gimp.org>
+
+	* about/index.html:  added some historical urls to the history list
+    
 2002-11-03 rockwlrs <rock@gimp.org>
 
 	* about/ChangeLogs/ChangeLog.pl: a script that autogenerates web pages
