Modified ChangeLog. Edit the photo edit menu to the index.
Modified ChangeLog.
Edit the photo edit menu to the index.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-03 scizzo <scizzo@gimp.org>
+
+        * tutorials/index.html: Edit the photo edit menu to the index.
+
 2002-11-03 carol <carol@gimp.org>
 
 	* about/index.html:  added some historical urls to the history list
