--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2002-11-05 scizzo <scizzo@gimp.org>
+
+        * tutorials/Photo_Edit/Channel_Mixer/: First port for the Channel
+        Mixer tutorial.
+
+        * tutorials/Photo_Edit/Reducing_CCD_Noise/: First port for the 
+        CCD Noise tutorial.
+
 2002-11-03 scizzo <scizzo@gimp.org>
 
         * tutorials/index.html: Edit the photo edit menu to the index.
