Modified ChangeLog. First port for the ND Filter tutorial.
Modified ChangeLog.
First port for the ND Filter tutorial.

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@
         * tutorials/Photo_Edit/ContrastMask/: First port for the Contrast Mask
         tutorial.
 
+        * tutorials/Photo_Edit/ND_Filter/: First port for the ND Filter
+        tutorial.
+
 2002-11-03 scizzo <scizzo@gimp.org>
 
         * tutorials/index.html: Edit the photo edit menu to the index.
