--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-06 scizzo <scizzo@gimp.org>
+
+        * tutorials/Photo_Edit/Sepia_Toning/: First port of the Sepia
+        Toning tutorial.
+
 2002-11-05 scizzo <scizzo@gimp.org>
 
         * tutorials/Photo_Edit/Channel_Mixer/: First port for the Channel
