Modified ChangeLog. First port of the Blur Overlay tutorial.
Modified ChangeLog.
First port of the Blur Overlay tutorial.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-07 scizzo <scizzo@gimp.org>
+
+        * tutorials/Photo_Edit/Blur_Overlays/: First port of the Blur
+        Overlay tutorial.
+
 2002-11-06 scizzo <scizzo@gimp.org>
 
         * tutorials/Photo_Edit/Sepia_Toning/: First port of the Sepia
