--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2002-11-07 scizzo <scizzo@gimp.org>
 
         * tutorials/Photo_Edit/Blur_Overlays/: First port of the Blur
-        Overlay tutorial.
+        Overlay tutorial. Small fixes.
 
 2002-11-06 scizzo <scizzo@gimp.org>
 
