--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,12 @@
 
 	* style/default.css: added "clear: both;" to span.subtitle
 
+	* books/gimp_for_linux_bible.png,
+	books/guerrilla_guide_to_great_graphics_with_the_gimp.png,
+	books/teach_yourself_gimp_in_24_hours.png,
+	books/the_gimp_for_linux_and_unix:_visual_quickstart_guide.png:
+	unused images removed
+	
 2002-11-08 scizzo <scizzo@gimp.org>
 
         * tutorials/Photo_Edit/Blending_Exposures/: First port of the
