Modified ChangeLog. First port of the Selective Color tutorial.
Modified ChangeLog.
First port of the Selective Color tutorial.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-11-09 scizzo <scizzo@gimp.org>
 
+        * tutorials/Photo_Edit/Selective_Color/: First port of the
+        Selective Color tutorial.
+
         * tutorials/Photo_Edit/Smart_Sharpening: First port of the 
         Smart Sharpening tutorial. Fixed the Further read links.
 
